--- a/package.json
+++ b/package.json
@@ -24,7 +24,6 @@
     "postinstall": "yarn flow-typed && electron-builder install-app-deps package.json && yarn build-dll && opencollective-postinstall",
     "postlint-fix": "prettier --ignore-path .eslintignore --single-quote --write '**/*.{*{js,jsx,json},babelrc,eslintrc,prettierrc,stylelintrc}'",
     "postlint-styles-fix": "prettier --ignore-path .eslintignore --single-quote --write '**/*.{css,scss}'",
-    "precommit": "lint-staged",
     "prestart": "yarn build",
     "start": "cross-env NODE_ENV=production electron ./app/main.prod.js",
     "start-main-dev": "cross-env HOT=1 NODE_ENV=development electron -r @babel/register ./app/main.dev.js",
@@ -245,6 +244,8 @@
     "find-process": "^1.4.1",
     "history": "^4.7.2",
     "less-loader": "^4.1.0",
+    "nightmare": "^3.0.2",
+    "nightmare-wait-for-url": "^1.0.0",
     "path": "^0.12.7",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
@@ -260,7 +261,8 @@
     "sequelize": "^5.3.2",
     "socket.io-client": "^2.2.0",
     "source-map-support": "^0.5.9",
-    "sqlite3": "^4.0.6"
+    "sqlite3": "^4.0.6",
+    "wait-until": "^0.0.2"
   },
   "devEngines": {
     "node": ">=7.x",
