--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "altX",
-  "productName": "altX",
+  "name": "altxbottools",
+  "productName": "altX Bot Tools",
   "version": "0.0.0",
   "description": "",
   "scripts": {
@@ -24,7 +24,7 @@
     "postinstall": "yarn flow-typed && electron-builder install-app-deps package.json && yarn build-dll && opencollective-postinstall",
     "postlint-fix": "prettier --ignore-path .eslintignore --single-quote --write '**/*.{*{js,jsx,json},babelrc,eslintrc,prettierrc,stylelintrc}'",
     "postlint-styles-fix": "prettier --ignore-path .eslintignore --single-quote --write '**/*.{css,scss}'",
-    "precommit": "lint-staged",
+    
     "prestart": "yarn build",
     "start": "cross-env NODE_ENV=production electron ./app/main.prod.js",
     "start-main-dev": "cross-env HOT=1 NODE_ENV=development electron -r @babel/register ./app/main.dev.js",
@@ -53,7 +53,7 @@
   },
   "main": "./app/main.prod.js",
   "build": {
-    "productName": "altX",
+    "productName": "altX Bot Tools",
     "appId": "org.altX",
     "extraResources": [
       {
@@ -146,7 +146,7 @@
     "antd-scss-theme-plugin": "^1.0.7",
     "babel-core": "7.0.0-bridge.0",
     "babel-eslint": "^10.0.1",
-    "babel-jest": "^23.6.0",
+    "babel-jest": "^24.8.0",
     "babel-loader": "^8.0.4",
     "babel-plugin-dev-expression": "^0.2.1",
     "babel-plugin-import": "^1.11.0",
@@ -158,8 +158,8 @@
     "cross-spawn": "^6.0.5",
     "css-loader": "^1.0.1",
     "detect-port": "^1.3.0",
-    "electron": "^3.0.10",
-    "electron-builder": "^20.34.0",
+    "electron": "^6.0.0",
+    "electron-builder": "^21.2.0",
     "electron-devtools-installer": "^2.2.4",
     "enzyme": "^3.7.0",
     "enzyme-adapter-react-16": "^1.7.0",
@@ -184,7 +184,7 @@
     "flow-typed": "^2.5.1",
     "husky": "^1.1.4",
     "identity-obj-proxy": "^3.0.0",
-    "jest": "^23.6.0",
+    "jest": "^24.8.0",
     "lint-staged": "^8.1.0",
     "mini-css-extract-plugin": "^0.4.4",
     "node-sass": "^4.10.0",
@@ -202,10 +202,11 @@
     "stylelint-config-prettier": "^4.0.0",
     "stylelint-config-standard": "^18.2.0",
     "terser-webpack-plugin": "^1.1.0",
-    "testcafe": "^0.23.2",
-    "testcafe-browser-provider-electron": "^0.0.6",
+    "testcafe": "^15.1.317922",
+    "testcafe-browser-provider-electron": "0.0.10",
     "testcafe-live": "^0.1.4",
     "testcafe-react-selectors": "^3.0.0",
+    "typescript": "^3.5.3",
     "url-loader": "^1.1.2",
     "webpack": "^4.26.0",
     "webpack-bundle-analyzer": "^3.0.3",
@@ -225,7 +226,7 @@
     "edit-json-file": "^1.2.1",
     "electron-debug": "^2.0.0",
     "electron-log": "^2.2.17",
-    "electron-updater": "^3.2.3",
+    "electron-updater": "^4.1.2",
     "encodeurl": "^1.0.2",
     "fast-csv": "^3.1.0",
     "find-process": "^1.4.1",
@@ -234,17 +235,19 @@
     "keytar": "^4.12.0",
     "less-loader": "^4.1.0",
     "macaddress": "^0.2.9",
+    "menu": "^0.2.5",
     "nightmare": "^3.0.2",
     "nightmare-wait-for-url": "^1.0.0",
     "open": "^6.4.0",
     "path": "^0.12.7",
+    "performance": "^1.1.1",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
     "react-hot-loader": "^4.3.12",
     "react-redux": "^5.1.1",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
-    "react-spinners": "^0.5.4",
+    "react-spinners": "0.5.12",
     "redux": "^4.0.1",
     "redux-saga": "^1.0.2",
     "redux-thunk": "^2.3.0",
@@ -254,7 +257,7 @@
     "socket.io-client": "^2.2.0",
     "source-map-support": "^0.5.9",
     "sqlite3": "^4.0.6",
-    "unzip": "^0.1.11",
+    "unzipper": "^0.10.2",
     "wait-until": "^0.0.2",
     "ws": "^7.1.1"
   },
